--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,11 @@
-# Ignore node_modules in client, admin, and server directories
+# Ignore node_modules in specific directories
 client/node_modules/
 admin/node_modules/
 server/node_modules/
+
+# Ignore all files inside specific folders, but still track the folders themselves
+/server/uploads/catalogs/*
+!/server/uploads/catalogs/.gitkeep
+
+/server/uploads/projects/*
+!/server/uploads/projects/.gitkeep
