--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.7.0",
     "@tailwindcss/vite": "^4.1.4",
+    "axios": "^1.8.4",
     "i18next": "^25.0.0",
     "i18next-browser-languagedetector": "^8.0.4",
     "react": "^19.0.0",
@@ -19,9 +21,12 @@
     "react-i18next": "^15.4.1",
     "react-icons": "^5.5.0",
     "react-imask": "^7.6.1",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.0",
     "sonner": "^2.0.3",
-    "tailwindcss": "^4.1.4"
+    "tailwindcss": "^4.1.4",
+    "three": "^0.124.0",
+    "vanta": "^0.5.24"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
