--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.8.4",
     "i18next": "^25.0.0",
     "i18next-browser-languagedetector": "^8.0.4",
+    "lottie-react": "^2.4.1",
     "react": "^19.0.0",
     "react-awesome-reveal": "^4.3.1",
     "react-dom": "^19.0.0",
